# matomo-core

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release.yml  rolling.yml  scheduled.yml  test.yml
scripts/: transform_readme.py
src/matomo_core/: __init__.py  constants.py  core.py  trackers.py
tests/: shared.py  test_matomo_core.py  test_trackers.py
tests/__snapshots__/: test_matomo_core.ambr
tests/__snapshots__/test_matomo_core/: test_matomo_core_doesnt_track_ignored_path.json
tests/__snapshots__/test_trackers/: test_perf_ms_tracker_sync_works_if_tracking_data_is_missing_in_scope.json
