[project]
name = "matomo-core"
version = "0.3.3"
description = "Sans-IO core for tracking with Matomo."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "syrupy>=4.9.0",
  "ty>=0.0.11",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"
